--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "risingstack-bootcamp",
+  "name": "risingstack-bootcamp-reference",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,24 +7,20 @@
     "start": "node .",
     "dev": "NODE_ENV=development nodemon .",
     "test-web": "NODE_ENV=test PROCESS_TYPE=web mocha 'web/test.setup.js' 'web/**/*.spec.js'",
-    "test-worker": "NODE_ENV=test PROCESS_TYPE=worker mocha 'worker/test.setup.js' 'worker/**/*.spec.js'",
-    "test-models": "NODE_ENV=test mocha 'models/test.setup.js' 'models/**/*.spec.js'",
-    "test-only": "npm run test-web && npm run test-worker && npm run test-models",
+    "test-only": "npm run test-web",
     "lint": "eslint .",
-    "test": "npm run lint && npm run test-only",
-    "migrate-db": "node ./scripts/migrate-db",
-    "trigger": "node ./scripts/trigger"
+    "test": "npm run lint && npm run test-only"
   },
-  "repository": "git+https://github.com/RisingStack/risingstack-bootcamp.git",
+  "repository": "git+https://github.com/RisingStack/risingstack-bootcamp-reference.git",
   "author": "Andras Toth <andras.toth@risingstack.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/RisingStack/risingstack-bootcamp/issues"
+    "url": "https://github.com/RisingStack/risingstack-bootcamp-reference/issues"
   },
   "engines": {
     "node": ">=8.1.2"
   },
-  "homepage": "https://github.com/RisingStack/risingstack-bootcamp#readme",
+  "homepage": "https://github.com/RisingStack/risingstack-bootcamp-reference#readme",
   "dependencies": {
     "ioredis": "3.1.1",
     "joi": "10.6.0",
